test page arrangement and wording

--- a/index.html
+++ b/index.html
@@ -25,26 +25,20 @@
     <div class="wrapper">
       <header>
         <h1 class="header">Fdrandom.js</h1>
-        <p class="header">Fast deterministic javascript random methods. Includes Uniform, Gaussian, gaming distributions and shuffle.</p>
+        <p class="header">Fast deterministic javascript random methods. Includes uniform, gaussian, various loaded distributions and Shuffles.</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/strainer/Fdrandom.js/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/strainer/Fdrandom.js/tarball/master">Download TAR</a></li>
           <li><a class="buttons github" href="https://github.com/strainer/Fdrandom.js">View&nbsp;On&nbsp;GitHub</a></li>
         </ul>
-
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/strainer">strainer</a></p>
-
-
       </header>
       <section>
         <h2>
-<a id="distribution-graphs-and-benchmarks" class="anchor" href="#distribution-graphs-and-benchmarks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Performance and test charts</h2>
+<a id="distribution-graphs-and-benchmarks" class="anchor" href="#distribution-graphs-and-benchmarks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Test Charts</h2>
 
 
 <div id="dash" style="text-align:center; margin:0px auto; width:100%;">
   
-  <button onclick="gogo()">Run 51 Charts</button> 
+  <button onclick="gogo()">Create 55 Charts</button> 
 
   <select id="selectedsize">
 		<option value="small">Small</option>
@@ -65,18 +59,18 @@
 </div>
 </div>
 <div id="legend">
-<h4>Legend</h4>
-<p>The lefthand charts plot 50 thousand variates as 25 thousand 2D points. Each point is drawn a different hue, which cycles through 14 values (a multiple of Fdrandom's state space of 7 ~50 bit numbers), the drawing alpha also increases through duration of the plot. These effects can render potential non-random patterning which might otherwise not be made visible. A normal histogram of the functions distribution is superimposed on the chart in blue.</p>
-<p>In the righthand charts a <em>random walk</em> is drawn with 800k points, each point is moved in X & Y axis by consecutive variates and a horizontal drift is added to traverse the chart 32 times on average. Red dots mark the beginning and end of the walk. Min and max values out of 32k samples and the average delta between sequential variates are printed on the righthand chart.</p>
+<h4>Lefthand charts:</h4>
+<p>50 thousand variates are plotted as 25 thousand 2D points. Each point is drawn a different hue, which cycles through 14 values (a multiple of Fdrandom's state space of 7 ~50 bit numbers), the drawing transparency also increases through duration of the plot. These effects can render potential non-random patterning which might otherwise not be made visible. A histogram of the functions distribution is superimposed on the chart in blue.</p>
+<h4>Righthand Charts:</h4>
+<p>A <em>random walk</em> is drawn with 800k points, each point is moved in X & Y axis by consecutive variates and a horizontal drift is added to traverse the chart 32 times on average. Red dots mark the beginning and end of the walk. Min and max values out of 32k samples and the average delta between sequential variates are printed on the righthand chart.</p>
 <br><h4>Notes</h4>
 <p>These charts are arranged to examine the functions performance and distributions and spot some potential bias or patterns. The chart of <code>ishr2()</code> reveals patterning which was not detected by the 'Diehard' tests. The function <code>gskip()</code> has special 2d distribution but seems unbiased.</p>
 <p>The final charts the examine the result of the antisorting quasi-random-shuffle on flat and coarse distributed inputs. The distrubition of the standard-random-shuffle function '<code>mixup()</code>' is also checked.</p>
-<p>The very last chart demos gthorn drawing a fuzzy circle with consecutive values, by stepping a target of PI/2 inside Math.sin: <code> function(){return Math.sin(x+=Fd.gthorn(0,Math.PI))}</code></p> 
-<br><h4>Contact</h4><p>If you encounter faults in this page on a modern browser send an issue to: <a href="https://github.com/strainer/Fdrandom.js/issues">github.com/strainer/Fdrandom.js/issues</a> to help out thanks. </p>
+<p>The very last chart has gthorn drawing a fuzzy circle with consecutive values, by stepping a target of PI/2 inside Math.sin: <code> function(){return Math.sin(x+=Fd.gthorn(0,Math.PI))}</code></p> 
 </div>
       </section>
       <footer>
-        <small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using custom theme</small>
+        This project is maintained by <a href="https://github.com/strainer">strainer</a> on <a href="https://pages.github.com">GitHub Pages</a> 
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
