--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
       </header>
       <section>
         <h2>
-<a id="distribution-graphs-and-benchmarks" class="anchor" href="#distribution-graphs-and-benchmarks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Test Charts</h2>
+<a id="distribution-graphs-and-benchmarks" class="anchor" href="#distribution-graphs-and-benchmarks" aria-hidden="true"><span class="octicon octicon-link"></span></a>60 Test Charts</h2>
 
 
 <div id="dash" style="text-align:center; margin:0px auto; width:100%;">
   
-  <button onclick="gogo()">Create 55 Charts</button> 
+  <button onclick="gogo()">Create Charts</button> 
 
   <select id="selectedsize">
 		<option value="small">Small</option>
