--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 <p>A <em>random walk</em> is drawn with 800k points, each point is moved in X & Y axis by consecutive variates and a horizontal drift is added to traverse the chart 32 times on average. Red dots mark the beginning and end of the walk. Min and max values out of 32k samples and the average delta between sequential variates are printed on the righthand chart.</p>
 <br><h4>Notes</h4>
 <p>These charts are made to display the functions performance and distributions and spot potential bias or patterns. The zrange function is made to produce erratic changing distributions. The blue histogram and drift charts include less samples than the 2D charts.</p>
+<p>Unexplained patterning can be seen in cauchy output, this does not seem due to the generator as even browser cyptos generator can create it. Seems something to do with the extreme range which cauchy produces...</p>
 <p>The final charts examine the results of the quasi-random 'antisorting' shuffle on flat and coarsely distributed array contents. The distrubition of the standard random shuffle function '<code>mixup()</code>' is also checked.</p>
 <p>The very last chart has gthorn drawing a fuzzy circle with consecutive values, by stepping a target of PI/2 inside Math.sin: <code> function(){return Math.sin(x+=Fd.gthorn(0,Math.PI))}</code></p> 
 </div>
